Update Documentation for 0.56.0 Release
Includes documentation on new remote-control functionality, as well as
a rewrite of the binding documentation.

Uses of `hab start <IDENT>` were replaced with `hab svc load <IDENT>`
in nearly all places, with additional documentation and caveating
around when to use `hab sup run <IDENT>` (tl;dr - rarely, if ever).

How to run Habitat on servers was pulled out into a separate page.

There are various other formatting and wording tweaks scattered
around, as well.

Signed-off-by: Christopher Maier <cmaier@chef.io>

--- a/www/data/docs_sidebar.yml
+++ b/www/data/docs_sidebar.yml
@@ -125,6 +125,8 @@ sidebar_links:
   - title: Best Practice Guides
     link: "/docs/best-practices"
     sub_links:
+    - title: Running Habitat on Servers
+      link: "/docs/best-practices/#running-habitat-servers"
     - title: Running Habitat Linux Containers
       link: "/docs/best-practices/#running-habitat-linux-containers"
     - title: Running Habitat Windows Containers
