Add back shellcheck travis job
Signed-off-by: Jon Bauman <5906042+baumanj@users.noreply.github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,13 @@ matrix:
 ########################################################################
 
 #
+# Job for linting Habitat shell program components
+#
+    - sudo: false
+      script:
+        - ./test/shellcheck.sh
+
+#
 # Job for testing Habitat Rust program components
 #
     - language: rust
